Cards of front page

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ h1{
     font-size: 3.5rem;
     font-weight: bold;
     color:#B6E4C8;
+    font-family: Georgia, serif;
 }
 body{
     background-color: #10454E;
