--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -10,7 +10,7 @@ margin: 2rem;
     text-align: end;
     padding: 1rem;
     margin: 2rem;
-    
+    margin-left: 40rem;
     }
 .heading2 h3 {
     font-size: 2.25rem;
@@ -54,4 +54,5 @@ padding: .8rem;
  .start:hover{
     box-shadow: 3px 4px 3px 4px silver;
     transform: scale(1.1) !important;
+    cursor: pointer;
 }
