--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,23 +1,36 @@
+
+.heading1{
+   background-image: url(https://sb-ui-kit-pro.startbootstrap.com/assets/img/illustrations/windows.svg), linear-gradient(to bottom right,rgb(26, 26, 235),rgb(106, 8, 106));
+   background-repeat: no-repeat;
+   background-position-x:47rem,0;
+   background-position-y:15rem,0 ;
+   background-size: 50% 50%, 100% 100%;
+   margin-top:-2.5%;
+   height:45rem;
+   border-bottom-left-radius: 20%;
+   border-bottom-right-radius: 20%;
+   padding:1rem;
+}
 .heading1 h2 {
-font-size: 2.5rem;
+font-size: 2.3rem;
 text-align: start;
 padding: 1rem;
 margin: 2rem;
-
+color:white;
+}
+.heading1 img{
+   height:10rem;
+}
+.girl{
+   margin-left: 50rem;
 }
 .heading1 h3 {
-    font-size: 2.25rem;
-    text-align: end;
-    padding: 1rem;
-    margin: 2rem;
-    margin-left: 40rem;
-    }
-.heading2 h3 {
-    font-size: 2.25rem;
-    text-align: start;
-    padding: 1rem;
-    margin: 2rem;
-    
+    font-size: 1.5rem;
+    width:45%;
+    margin-left: 5rem;
+    margin-top:5rem;
+    margin-bottom: -4rem;
+    color:white;
     }
 
 .heading2 h2{
@@ -31,7 +44,6 @@ font-size: 1.4rem;
 font-weight: 400;
 text-align: center;
 padding: .8rem;
-/* margin: 1rem; */
  }
  ul{
     list-style: none;
@@ -39,7 +51,6 @@ padding: .8rem;
 
  .instructions h2{
     text-align: center;
-    padding: 1rem;
     font-size: 2.25rem;
  }
  .start{
@@ -47,12 +58,14 @@ padding: .8rem;
     height:5rem;
     width:15rem;
     font-size:2rem;
-    background-color: #071B2F;
+    margin-top:13rem;
+    background-color: rgb(84, 185, 84);
+    border:1px solid rgb(84, 185, 84);
     border-radius: 6%;
-    color:#B6E4C8;
+    color:white;
  }
  .start:hover{
-    box-shadow: 3px 4px 3px 4px silver;
+    box-shadow: 3px 4px 3px 4px blueviolet;
     transform: scale(1.1) !important;
     cursor: pointer;
 }
