new home layout

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,4 +1,4 @@
-
+/* 
 .heading1{
    background-image: url(https://sb-ui-kit-pro.startbootstrap.com/assets/img/illustrations/windows.svg), linear-gradient(to bottom right,rgb(26, 26, 235),rgb(106, 8, 106));
    background-repeat: no-repeat;
@@ -68,4 +68,4 @@ padding: .8rem;
     box-shadow: 3px 4px 3px 4px blueviolet;
     transform: scale(1.1) !important;
     cursor: pointer;
-}
+} */
