--- a/src/components/home/main.css
+++ b/src/components/home/main.css
@@ -1,14 +1,12 @@
 .container{
-    display: flex;
     width: 100%;
     height:100%;
-/* background: url("../../assests/b1.mp4"); */
 }
-.heading1{
-display: flex;
-flex-direction: row;
-flex-wrap: wrap;
-align-items: center;
+.logo img{
+    height:10rem;
+    margin-bottom: -10rem;
+    border-radius: 100%;
+    margin-left:1%;
 }
 #video{
     object-fit: cover;
@@ -18,53 +16,160 @@ align-items: center;
     width: 100%;
     filter: brightness(.8);
     }
-.text{
-    color:white ;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    /* flex : 2; */
-    padding : 2rem;
-    /* font-family: cursive; */
-    width : 60%;
-}
+
 
 .image{ 
     height: 35rem;
-    margin-top : 2em;
-    /* filter : brightness(.8); */
-    /* text-shadow: 0 4px 8px rgba(0, 0, 0, 0.6); */
-    filter : brightness(.8) ;
-    /* filter:drop-shadow(9px 49px 87px black); */
+    margin-top : -5em;
+    margin-left:65rem;
+    filter : brightness(.8);
 }
 
-.image-container{
-    /* display: flex; */
-    /* height: 20rem; */
-    /* justify-content: center;
-    align-items: flex-end; */
-    /* flex : 1; */
-    /* align-self: center; */
-    width : 40%;
+.start{
+    margin-left:40rem;
+    height:5rem;
+    width:15rem;
+    font-size:2rem;
+    margin-top:-10rem;
+    background-color: rgb(84, 185, 84);
+    border:1px solid rgb(84, 185, 84);
+    border-radius: 10%;
+    color:white;
+ }
+ .start:hover{
+    box-shadow: 3px 4px 3px 4px rgb(8, 8, 96);
+    transform: scale(1.1) !important;
+    cursor: pointer;
 }
-
-
-.text h2{
+.button.large {
+    margin: 0;
+    padding: 3.25rem;
+  }
+  .button.large a {
+    color: black;
+    font-size: 1.75rem;
+    font-weight: 100;
+    margin-top: 2rem;
+  }
+  
+  .panel i {
     font-size: 2rem;
-    text-align: start;
-    
-}
-
-.text h3{
-    font-size: 1.5rem;
-    text-transform: capitalize;
-    text-align: center;
-
-}
-
-.text h1{
-    font-size: 4rem;
-    /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
-    /* font-style: italic; */
-}
+    display: block;
+    float: left;
+    width: 20%;
+    opacity: 0.5;
+  }
+  .panel a, 
+  .panel p, 
+  .panel small {
+    width: 100%;
+    float: right;
+  }
+  .panel a {
+    margin-bottom: 0.5rem;
+  }
+  .panel small {
+    margin-top: -0.5rem;
+    font-style: italic;
+  }
+  .flip-cards .panel {
+    border: none;
+  }
+  
+  .flip-cards .panel i,
+  .flip-cards .panel p,
+  .flip-cards .panel a,
+  .flip-cards .panel small {
+    color: black;
+  }
+  
+  .flip-cards li > .button {
+    background-color: white;
+  }
+  .flip-cards li > .panel {
+    background-color: white;
+  }
+.flip-cards {
+    margin-top:-25rem;
+    float: left;
+    width: 100%;
+    height: 100%;
+    padding-left: 1rem;
+    margin-left:15rem;
+  }
+  
+  .flip-cards li {
+    float: left;
+    width: 10%;
+    height: 180px;
+    position: relative;
+    padding: 0;
+    margin: 5rem;
+    list-style-type: none
+  }
+  
+  .flip-cards li:hover {
+    cursor: pointer;
+  }
+  
+  .flip-cards li:hover .card-front {
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+    -webkit-transform: perspective(1000) rotateY(180deg);
+    -moz-transform: perspective(1000) rotateY(180deg);
+    -ms-transform: perspective(1000) rotateY(180deg);
+    -o-transform: perspective(1000) rotateY(180deg);
+    transform: perspective(1000) rotateY(180deg);
+  }
+  
+  .flip-cards li:hover .card-back {
+    z-index: 950;
+    -webkit-transform: rotateY(0deg);
+    -moz-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    -o-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+    -webkit-transform: perspective(1000) rotateY(0deg);
+    -moz-transform: perspective(1000) rotateY(0deg);
+    -ms-transform: perspective(1000) rotateY(0deg);
+    -o-transform: perspective(1000) rotateY(0deg);
+    transform: perspective(1000) rotateY(0deg);
+  }
+  
+  .flip-cards .card-front,
+  .flip-cards .card-back {
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transition: -webkit-transform 0.6s;
+    -moz-transition: -moz-transform 0.6s;
+    -o-transition: -o-transform 0.6s;
+    transition: transform 0.6s;
+    display: block;
+    height: 100%;
+    position: absolute;
+    width: 100%;
+  }
+  
+  .flip-cards .card-front {
+    -webkit-transform: perspective(1000) rotateY(0);
+    -moz-transform: perspective(1000) rotateY(0);
+    -ms-transform: perspective(1000) rotateY(0);
+    -o-transform: perspective(1000) rotateY(0);
+    transform: perspective(1000) rotateY(0);
+    z-index: 900;
+  }
+  
+  .flip-cards .card-back {
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    -o-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
+    z-index: 800;
+  }
