--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,6 @@
-h1{
-    text-align: center;
-    font-size: 3.5rem;
-    font-weight: bold;
-    color:#B6E4C8;
-    font-family: Georgia, serif;
-}
-body{
+
+body{ padding: 0%;
+    margin: 0%;
+    box-sizing: border-box;
     background-color: rgb(0, 0, 0);
 }
