--- a/src/components/home/main.css
+++ b/src/components/home/main.css
@@ -9,10 +9,10 @@
 .heading1{
  display: flex;
  flex-direction: row;
- flex-wrap: wrap;
+ /* flex-wrap: wrap; */
  justify-content: space-evenly;
  align-items: center;
- margin-top: 10rem;
+ /* margin-top: 10rem; */
 
 }
 
@@ -56,3 +56,24 @@
       font-size: 2.25rem;
       color:#39bdc8
    }
+
+   @media (max-width: 999px) {
+  .heading1{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+  }
+  .headimage{
+    height: 10rem;
+    width: 7rem;
+  }
+  .heading{
+    flex-direction:row;
+    justify-content: center;
+    align-items: center;
+  }
+  .heading h1{
+    font-size: 3rem;
+  }
+  }
