--- a/src/components/home/maincard.css
+++ b/src/components/home/maincard.css
@@ -3,17 +3,11 @@
 
 .container  {
   position: relative;
-  left: 10%;
-  /* top: 50%; */
-  transform: translate(-50%, -50%);
+ margin-top: 4rem;
   height: 250px;
   width: 300px;
-  /* background: #f2f2f2; */
   overflow: hidden;
-  /* border-radius: 20px; */
   cursor: pointer;
-  /* box-shadow: 0 0 20px 8px #d0d0d0; */
-  /* From https://css.glass */
 background: rgba(255, 255, 255, 0.3);
 border-radius: 16px;
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -24,71 +18,47 @@ backdrop-filter: blur(4px);
   background: rgba(255, 255, 255, 0.61);
 }
 .content {
-  position: absolute;
-  top: 50%;
-  transform: translatey(-50%);
-  text-align: justify;
-  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 40px;
   font-family: 'Merriweather', serif;
 }
 
-h1 {
-  font-weight: 900;
-  text-align: center;
+
+
+.head{
+  margin-bottom: 4rem;
+  font-size: 2.25rem;
+}
+button {
+  padding: 1.3em 3em;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
 }
 
-h3 {
-  font-weight: 300;
+button:hover {
+  background-color: #39BDC8;
+  /* filter: opacity(0.8); */
+  box-shadow: 0px 15px 20px rgba(57, 189, 200, .4);
+  color: #fff;
+  transform: translateY(-7px);
 }
 
-/* .flap {
-  width: 100%;
-  height: 100%;
+button:active {
+  transform: translateY(-1px);
 }
 
-.flap::before {
-  position: absolute;
-  content: "";
-  height: 100%;
-  width: 100%; */
-/* From https://css.glass */
-/* background: rgba(255, 255, 255, 0.26);
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(4px);
--webkit-backdrop-filter: blur(4px);
-border: 1px solid rgba(255, 255, 255, 0.91);
-
-  
-  background-position: 100px;
-  background-repeat: no-repeat;
-  transition: 1s;
-}
-
-.flap::after {
-  position: absolute;
-  content: "";
-  height: 100%;
-  width: 100%;
-  right: 0; */
-/* From https://css.glass */
-/* background: rgba(255, 255, 255, 0.26);
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(4px);
--webkit-backdrop-filter: blur(4px);
-border: 1px solid rgba(255, 255, 255, 0.91);
-
-  background-position: -200px;
-  background-repeat: no-repeat;
-  transition: 1s;
-}
-
-.container:hover .flap::after {
-  transform: translatex(300px);
-}
-
-.container:hover .flap::before{
-  transform: translatex(-300px);
-} */
